Enhance backend functionality and frontend UI: Expanded .dockerignore for better environment management, refactored app.py to include new route blueprints, and added multiple new routes for chat, market, news, and portfolio functionalities. Improved error handling and logging throughout the application. Updated requirements.txt for compatibility with new dependencies and enhanced Dockerfile for optimized builds. Frontend updates include a new chatbot interface, model selection feature, and improved news display components.

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -8,13 +8,18 @@ ENV PYTHONUNBUFFERED 1       # Prevents python from buffering stdout/stderr
 # Set the working directory in the container
 WORKDIR /app
 
-# Install system dependencies if needed (e.g., for psycopg2, uncomment below)
-# RUN apt-get update && apt-get install -y --no-install-recommends gcc libpq-dev && rm -rf /var/lib/apt/lists/*
+# Install system dependencies
+RUN apt-get update && apt-get install -y --no-install-recommends \
+    build-essential \
+    gcc \
+    libffi-dev \
+    && rm -rf /var/lib/apt/lists/*
 
 # Install Python dependencies
 # Copy only requirements first to leverage Docker cache
 COPY requirements.txt .
-RUN pip install --no-cache-dir -r requirements.txt
+RUN pip install --upgrade pip && \
+    pip install --no-cache-dir -r requirements.txt
 
 # Copy the rest of the application code
 COPY . .
